@@ -9,28 +9,11 @@
 #include <math.h>
 #include <string.h>
 
-#define DEBUG 0
+#define DEBUG 1
 
 #define DETAIL(xx) ((detail) != 0 && strcmp (xx, detail) == 0)
 
-/* Focus change hooks */
-#define WINDOW_FOCUS_DATA_KEY "eazel-engine-focus-data"
-static GQuark window_focus_data_key;
 GtkStyleClass *parent_style_class;
-
-typedef struct focus_change_data_struct focus_change_data;
-struct focus_change_data_struct {
-    GtkWidget *widget;
-
-    gboolean is_focused;
-    gboolean connected;
-
-    guint focus_in_signal_id;
-    guint focus_out_signal_id;
-    guint destroyed_signal_id;
-};
-
-static GSList *focus_data_list = NULL;
 
 static void
 draw_hline (GtkStyle *style,
@@ -239,141 +222,6 @@ draw_handle (GtkStyle *style,
 	     gint y, gint width, gint height, GtkOrientation orientation);
 
 
-static focus_change_data *
-get_focus_data (GtkWidget *widget, gboolean add)
-{
-    GtkWidget *toplevel = gtk_widget_get_toplevel (widget);
-    focus_change_data *data = gtk_object_get_data_by_id (GTK_OBJECT (toplevel),
-							 window_focus_data_key);
-    if (data == 0 && add)
-    {
-	data = g_new0 (focus_change_data, 1);
-	data->widget = widget;
-	gtk_object_set_data_by_id_full (GTK_OBJECT (toplevel),
-					window_focus_data_key,
-					data, g_free);
-	focus_data_list = g_slist_prepend (focus_data_list, data);
-    }
-
-    return data;
-}
-
-static void
-focus_change_helper (GtkWidget *widget, gpointer data)
-{
-    if (GTK_IS_CONTAINER (widget))
-    {
-	gtk_container_forall (GTK_CONTAINER (widget),
-			      focus_change_helper, NULL);
-    }
-    else if (GTK_IS_RANGE (widget))
-    {
-	gtk_widget_queue_draw (widget);
-    }
-    else if (GTK_IS_PROGRESS (widget))
-    {
-	/* This is horrible. But the GtkProgress widget stores the
-	   progress bar in a pixmap, then blits it on expose. But
-	   it will refresh the pixmap when asked to resize.. */
-	if (GTK_WIDGET_DRAWABLE (widget))
-	    gtk_widget_queue_resize (widget);
-    }
-}
-
-static void
-window_focus_in_callback (GtkWidget *window, GdkEventFocus *event,
-			  focus_change_data *data)
-{
-  printf ("focus in\n");
-    data->is_focused = TRUE;
-    gtk_container_forall (GTK_CONTAINER (window),
-			  focus_change_helper, NULL);
-}
-
-static void
-window_focus_out_callback (GtkWidget *window, GdkEventFocus *event,
-			   focus_change_data *data)
-{
-  printf ("focus out\n");
-    data->is_focused = FALSE;
-    gtk_container_forall (GTK_CONTAINER (window),
-			  focus_change_helper, NULL);
-}
-
-static void
-window_destroyed_callback (GtkWidget *window, focus_change_data *data)
-{
-    focus_data_list = g_slist_remove (focus_data_list, data);
-}
-
-gboolean
-eazel_engine_widget_in_focused_window_p (GtkWidget *widget)
-{
-  focus_change_data *data = get_focus_data (widget, FALSE);
-  return TRUE;
-
-  if (data) {
-    printf ("there was data\n");
-    printf ("data->is_focused: %d\n", data->is_focused);
-  } else {
-    printf ("there was no data\n");
-  }
-  return (data != 0) ? data->is_focused : FALSE;
-}
-
-static void
-install_focus_hooks (GdkWindow *window)
-{
-    /* Evilness */
-    GtkWidget *widget;
-    gdk_window_get_user_data (window, (gpointer *) &widget);
-
-    printf ("installing focus hooks\n");
-    if (widget != NULL && GTK_IS_WINDOW (widget))
-    {
-	focus_change_data *data = get_focus_data (widget, TRUE);
-	if (!data->connected)
-	{
-	    /* Connect to this window so we get focus-in/out events */
-	    data->focus_in_signal_id
-		= g_signal_connect (GTK_OBJECT (widget), "focus_in_event",
-				      GTK_SIGNAL_FUNC(window_focus_in_callback), data);
-	    data->focus_out_signal_id
-		= g_signal_connect (GTK_OBJECT (widget), "focus_out_event",
-				      GTK_SIGNAL_FUNC(window_focus_out_callback), data);
-	    data->destroyed_signal_id
-		= g_signal_connect (GTK_OBJECT (widget), "destroy",
-				      GTK_SIGNAL_FUNC(window_destroyed_callback), data);
-
-	    data->connected = TRUE;
-	}
-    }
-}
-
-void
-uninstall_all_focus_hooks (void)
-{
-    GSList *ptr;
-    for (ptr = focus_data_list; ptr != 0; ptr = ptr->next)
-    {
-	focus_change_data *data = ptr->data;
-	if (data->connected)
-	{
-	    gtk_signal_disconnect (GTK_OBJECT (data->widget),
-				   data->focus_in_signal_id);
-	    gtk_signal_disconnect (GTK_OBJECT (data->widget),
-			       data->focus_out_signal_id);
-	    gtk_signal_disconnect (GTK_OBJECT (data->widget),
-				   data->destroyed_signal_id);
-	}
-	gtk_object_remove_data_by_id (GTK_OBJECT (data->widget),
-				      window_focus_data_key);
-    }
-    g_slist_free (focus_data_list);
-    focus_data_list = NULL;
-}
-
-
 /* utility functions */
 
 static inline void
@@ -1333,7 +1181,7 @@ draw_box (GtkStyle *style,
 	    if (state_type != GTK_STATE_INSENSITIVE)
 	    {
 		gboolean focused;
-		focused = eazel_engine_widget_in_focused_window_p (widget);
+		focused = 1;
 		paint_stock_image (theme_data,
 				   focused ? EAZEL_ENGINE_PROGRESS_BAR
 				   : EAZEL_ENGINE_PROGRESS_BAR_INACTIVE,
@@ -2523,14 +2371,14 @@ draw_slider (GtkStyle *style,
     if (area)
 	gdk_gc_set_clip_rectangle (style->black_gc, area);
 
-    focused = (widget != 0) && eazel_engine_widget_in_focused_window_p (widget);
+    focused = (widget != 0);
 
     if (DETAIL ("slider")) {
 	{
 	    int thumb_x, thumb_y;
 	    gboolean focused;
 
-	    focused = eazel_engine_widget_in_focused_window_p (widget);
+	    focused = 1;
 
 	    /* XXX could be a gradient? */
 	    paint_stock_image (theme_data,
